--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,14 @@
 	<name>spring-test Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
-	<repositories>
+<!-- 	<repositories>
 		<repository>
 			<id>maven2-repository.dev.java.net</id>
 			<name>Java.net Repository for Maven</name>
-			<url>http://download.java.net/maven/2/</url>
+			<url>http://www.oracle.com/webfolder/application/maven</url>
 			<layout>default</layout>
 		</repository>
-	</repositories>
+	</repositories> -->
 
 	<dependencies>
 		<dependency>
@@ -35,12 +35,12 @@
 			<version>5.1.35</version>
 		</dependency>
 
-		<dependency>
+	<!-- 	<dependency>
 			<groupId>javax.sql</groupId>
 			<artifactId>jdbc-stdext</artifactId>
 			<version>2.0</version>
 		</dependency>
-
+ -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
