--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,9 @@
 	<name>spring-test Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
-<!-- 	<repositories>
-		<repository>
-			<id>maven2-repository.dev.java.net</id>
-			<name>Java.net Repository for Maven</name>
-			<url>http://www.oracle.com/webfolder/application/maven</url>
-			<layout>default</layout>
-		</repository>
-	</repositories> -->
+	<!-- <repositories> <repository> <id>maven2-repository.dev.java.net</id> 
+		<name>Java.net Repository for Maven</name> <url>http://www.oracle.com/webfolder/application/maven</url> 
+		<layout>default</layout> </repository> </repositories> -->
 
 	<dependencies>
 		<dependency>
@@ -35,12 +30,8 @@
 			<version>5.1.35</version>
 		</dependency>
 
-	<!-- 	<dependency>
-			<groupId>javax.sql</groupId>
-			<artifactId>jdbc-stdext</artifactId>
-			<version>2.0</version>
-		</dependency>
- -->
+		<!-- <dependency> <groupId>javax.sql</groupId> <artifactId>jdbc-stdext</artifactId> 
+			<version>2.0</version> </dependency> -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
@@ -75,6 +66,12 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 			<version>4.2.0.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3.1</version>
 		</dependency>
 
 	</dependencies>
